Implement auth for nym-vpn-api-client (#1017)
* wip

* wip: get account

* wip

* wip

* wip: explore better impl

* Remove outdated crates in patch section

* wip

* Start outlining methods

* Add more response types

* Add gateway calls

* tidy

* WIP: replace old vpn client

* wip

* Fix compilation

* Tidy

* Generic error return

* Wrap errors

* Finish wrapping errors

* Migrate over old tests

* Remove headers.rs

* tidy

* Rename to response.rs

* Go through and update all types

* Move gw types to response.rs

* Update gw types to match convention

* Remove handle_get_account_summary

* Remove two wip methods

--- a/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
@@ -15,12 +15,15 @@ chrono.workspace = true
 nym-crypto = { workspace = true, features = ["asymmetric"] }
 nym-http-api-client.workspace = true
 nym-validator-client.workspace = true
-reqwest = { workspace = true, features = ["rustls-tls"] }
+reqwest = { workspace = true, features = ["rustls-tls", "json"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
+
+# Remove me?
+bip39 = { version = "2.0.0", features = ["zeroize"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
