fix android build

--- a/nym-vpn-core/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/nym-vpn-lib/Cargo.toml
@@ -55,12 +55,12 @@ url.workspace = true
 shadowsocks-service = { version = "=1.14.3" }
 shadowsocks = { version = "=1.14.2" }
 
-talpid-core = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
-talpid-platform-metadata = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
-talpid-routing = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
-talpid-tunnel = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
-talpid-types = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
-talpid-wireguard = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "f9fd4be7f" }
+talpid-core = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "94457e0" }
+talpid-platform-metadata = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "94457e0" }
+talpid-routing = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "94457e0" }
+talpid-tunnel = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "94457e0" }
+talpid-types = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "94457e0" }
+talpid-wireguard = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "94457e0" }
 
 nym-authenticator-requests.workspace = true
 nym-bandwidth-controller-pre-ecash.workspace = true
@@ -93,7 +93,7 @@ nym-wg-go = { path = "../crates/nym-wg-go" }
 android_logger = "0.14.1"
 err-derive = "0.3.1"
 jnix = { version = "=0.5.1", features = ["derive"] }
-nix = "0.23"
+nix = { workspace = true, features = ["socket", "net"] }
 rand = "0.8.5"
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
