--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -22,6 +22,8 @@ jobs:
         include:
           - os: arc-ubuntu-22.04
             target: android
+          - os: custom-runner-mac-m1
+            target: ios
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -64,7 +66,7 @@ jobs:
           add-to-path: false
 
       - name: Add iOS target
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: contains(matrix.target, 'ios')
         run: rustup target add aarch64-apple-ios
 
       - name: Add Android target
@@ -83,15 +85,19 @@ jobs:
             echo "ANDROID_NDK_HOME=${{ steps.setup-ndk.outputs.ndk-path }}" >> $GITHUB_ENV
             echo "NDK_TOOLCHAIN_DIR=${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_ENV
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/aarch64-unknown-linux-gnu" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu" >> $GITHUB_ENV
+          elif ${{ matrix.target == 'ios' }}; then
+            triplet=aarch64-apple-ios
+            echo "TRIPLET=$triplet" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
           elif ${{ matrix.os == 'macos-12' || matrix.os == 'macos-13' }}; then
             triplet=x86_64-apple-darwin
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/x86_64-apple-ios" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} >> $GITHUB_ENV
           elif ${{ contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1') }}; then
             triplet=universal-apple-darwin
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} >> $GITHUB_ENV
           elif ${{ contains(matrix.os, 'windows') }}; then
             triplet=x86_64-pc-windows-msvc
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
@@ -129,7 +135,7 @@ jobs:
           ./wireguard/build-wireguard-go.sh
 
       - name: Build wireguard (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: contains(matrix.target, 'ios')
         shell: bash
         run: |
           ./wireguard/build-wireguard-go.sh --ios
@@ -199,21 +205,19 @@ jobs:
           cargo ndk  -t aarch64-linux-android -o ./build build -p nym-vpn-lib
 
       - name: Build (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: contains(matrix.target, 'ios')
         working-directory: nym-vpn-core
         run: |
-          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios"
-          RUSTFLAGS=$rustflags cargo build --verbose --target aarch64-apple-ios -p nym-vpn-lib
+          cargo build --verbose --target aarch64-apple-ios -p nym-vpn-lib
 
       - name: Generate uniffi (Android)
         if: contains(matrix.target, 'android')
         working-directory: nym-vpn-core
         run: |
-          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu"
-          RUSTFLAGS=$rustflags cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
+          cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
 
       - name: Generate uniffi (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: contains(matrix.target, 'ios')
         working-directory: nym-vpn-core
         run: |
           cargo run --bin uniffi-bindgen generate --library target/aarch64-apple-ios/debug/libnym_vpn_lib.a  --language swift --out-dir build -n
@@ -239,7 +243,7 @@ jobs:
         run: exit 1
 
       - name: Uniffi diff check (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: contains(matrix.target, 'ios')
         working-directory: nym-vpn-core
         run: |
           diff -B build/nym_vpn_lib.swift nym-vpn-lib/uniffi/nym_vpn_lib.swift
@@ -247,7 +251,7 @@ jobs:
         id: diff_ios
 
       - name: Upload generated uniffi file (iOS)
-        if: steps.diff_ios.outcome == 'failure' && (contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1'))
+        if: steps.diff_ios.outcome == 'failure' && contains(matrix.target, 'ios')
         uses: actions/upload-artifact@v4
         with:
           name: updated-uniffi-ios
@@ -255,7 +259,7 @@ jobs:
           retention-days: 1
 
       - name: Fail workflow for uniffi (iOS)
-        if: steps.diff_ios.outcome == 'failure' && (contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1'))
+        if: steps.diff_ios.outcome == 'failure' && contains(matrix.target, 'ios')
         run: exit 1
 
       - name: Run tests
@@ -276,7 +280,7 @@ jobs:
           cargo ndk -t aarch64-linux-android clippy -p nym-vpn-lib -- -Dwarnings
 
       - name: Clippy (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: contains(matrix.target, 'ios')
         working-directory: nym-vpn-core
         run: |
           cargo clippy --target aarch64-apple-ios -p nym-vpn-lib -- -Dwarnings
