--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -221,7 +221,7 @@ jobs:
         if: matrix.target == 'ios'
         working-directory: nym-vpn-core
         run: |
-          cargo run --bin uniffi-bindgen generate --library target/aarch64-apple-ios/debug/libnym_vpn_lib.a  --language swift --out-dir build -n
+          RUSTFLAGS= cargo run --bin uniffi-bindgen generate --library target/aarch64-apple-ios/debug/libnym_vpn_lib.a  --language swift --out-dir build -n
 
       - name: Uniffi diff check (Android)
         if: matrix.target == 'android'
