--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -15,7 +15,8 @@ members = [
     "crates/nym-vpnd",
     "crates/nym-wg-gateway-client",
     "crates/nym-wg-go",
-    "nym-vpn-lib",
+    "nym-vpn-lib", 
+    "uniffi-bindgen",
 ]
 
 # For local development
