--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -270,7 +270,7 @@ jobs:
         run: exit 1
 
       - name: Run tests
-        if: matrix.target != 'android'
+        if: matrix.target != 'android' && matrix.target != 'ios'
         working-directory: nym-vpn-core
         run: |
           cargo test --verbose
