--- a/.github/workflows/build-nym-vpn-android.yml
+++ b/.github/workflows/build-nym-vpn-android.yml
@@ -105,13 +105,9 @@ jobs:
         run: |
           cargo install cargo-ndk cargo-license --locked
 
-#      - name: Install deps
-#        run: |
-#          sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip
-
-      - name: Install deps macos
+      - name: Install deps
         run: |
-          brew install protobuf
+          sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip
 
       # Here we need to decode keystore.jks from base64 string and place it
       # in the folder specified in the release signing configuration
