Move uniffi-bindgen to crates

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -15,8 +15,8 @@ members = [
     "crates/nym-vpnd",
     "crates/nym-wg-gateway-client",
     "crates/nym-wg-go",
+    "crates/uniffi-bindgen",
     "nym-vpn-lib", 
-    "uniffi-bindgen",
 ]
 
 # For local development
