--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -22,6 +22,8 @@ jobs:
         include:
           - os: arc-ubuntu-22.04
             target: android
+          - os: custom-runner-mac-m1
+            target: ios
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -52,23 +54,23 @@ jobs:
           components: rustfmt, clippy
 
       - name: Install cargo ndk
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         run: cargo install cargo-ndk
 
       - name: Setup NDK
         uses: nttld/setup-ndk@v1
         id: setup-ndk
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         with:
           ndk-version: r26c
           add-to-path: false
 
       - name: Add iOS target
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: matrix.target == 'ios'
         run: rustup target add aarch64-apple-ios
 
       - name: Add Android target
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         run: rustup target add aarch64-linux-android
 
       - name: Set env
@@ -83,30 +85,28 @@ jobs:
             echo "ANDROID_NDK_HOME=${{ steps.setup-ndk.outputs.ndk-path }}" >> $GITHUB_ENV
             echo "NDK_TOOLCHAIN_DIR=${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_ENV
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/aarch64-unknown-linux-gnu" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu" >> $GITHUB_ENV
+          elif ${{ matrix.target == 'ios' }}; then
+            triplet=aarch64-apple-ios
+            echo "TRIPLET=$triplet" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
           elif ${{ matrix.os == 'macos-12' || matrix.os == 'macos-13' }}; then
             triplet=x86_64-apple-darwin
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/x86_64-apple-ios" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
           elif ${{ contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1') }}; then
             triplet=universal-apple-darwin
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
           elif ${{ contains(matrix.os, 'windows') }}; then
             triplet=x86_64-pc-windows-msvc
             echo "TRIPLET=$triplet" >> $GITHUB_ENV
-            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet}" >> $GITHUB_ENV
+            echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/${triplet} -L ${GITHUB_WORKSPACE}/build/lib/ -Clink-args=/LIBPATH:${GITHUB_WORKSPACE}/build/lib/x64-Debug" >> $GITHUB_ENV
+            mkdir -p ${GITHUB_WORKSPACE}/build/lib/
           else
             echo " ✗ unknown platform/arch [${{ matrix.os }}]"
             exit 1
           fi
-
-      - name: Set extra env for Windows
-        if: contains(matrix.os, 'windows')
-        shell: bash
-        run: |
-          echo "RUSTFLAGS=-L ${GITHUB_WORKSPACE}/build/lib/x86_64-pc-windows-msvc -L ${GITHUB_WORKSPACE}/build/lib/ -Clink-args=/LIBPATH:${GITHUB_WORKSPACE}/build/lib/x64-Debug" >> $GITHUB_ENV
-          mkdir -p ${GITHUB_WORKSPACE}/build/lib/
 
       - name: Install Go
         uses: actions/setup-go@v5
@@ -124,18 +124,19 @@ jobs:
         uses: microsoft/setup-msbuild@v2
 
       - name: Build wireguard
+        if: matrix.target != 'ios' && matrix.target != 'android'
         shell: bash
         run: |
           ./wireguard/build-wireguard-go.sh
 
       - name: Build wireguard (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: matrix.target == 'ios'
         shell: bash
         run: |
           ./wireguard/build-wireguard-go.sh --ios
 
       - name: Build wireguard (Android)
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         run: ./wireguard/libwg/build-android.sh
 
       - name: Download wintun.zip and winpcap.zip
@@ -187,39 +188,43 @@ jobs:
           cargo fmt --check
 
       - name: Build
-        if: "!contains(matrix.target, 'android')"
+        if: matrix.target != 'android' && matrix.target != 'ios'
         working-directory: nym-vpn-core
         run: |
           cargo build --verbose
 
       - name: Build (Android)
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         working-directory: nym-vpn-core
         run: |
           cargo ndk  -t aarch64-linux-android -o ./build build -p nym-vpn-lib
 
       - name: Build (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: matrix.target == 'ios'
         working-directory: nym-vpn-core
         run: |
-          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/aarch64-apple-ios"
-          RUSTFLAGS=$rustflags cargo build --verbose --target aarch64-apple-ios -p nym-vpn-lib
+          cargo build --verbose --target aarch64-apple-ios -p nym-vpn-lib
 
       - name: Generate uniffi (Android)
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         working-directory: nym-vpn-core
         run: |
-          rustflags="-L ${GITHUB_WORKSPACE}/build/lib/x86_64-unknown-linux-gnu"
-          RUSTFLAGS=$rustflags cargo run --bin uniffi-bindgen generate --library target/aarch64-linux-android/debug/libnym_vpn_lib.so  --language kotlin --out-dir build -n
+          cargo run --bin uniffi-bindgen generate \
+            --library target/aarch64-linux-android/debug/libnym_vpn_lib.so \
+            --config nym-vpn-lib/uniffi.toml \
+            --language kotlin --out-dir build -n
 
       - name: Generate uniffi (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: matrix.target == 'ios'
         working-directory: nym-vpn-core
         run: |
-          cargo run --bin uniffi-bindgen generate --library target/aarch64-apple-ios/debug/libnym_vpn_lib.a  --language swift --out-dir build -n
+          cargo run --bin uniffi-bindgen generate \
+            --library target/aarch64-apple-ios/debug/libnym_vpn_lib.a  \
+            --config nym-vpn-lib/uniffi.toml \
+            --language swift --out-dir build -n
 
       - name: Uniffi diff check (Android)
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         working-directory: nym-vpn-core
         run: |
           diff -B build/nym_vpn_lib/nym_vpn_lib.kt nym-vpn-lib/uniffi/nym_vpn_lib.kt
@@ -227,7 +232,7 @@ jobs:
         id: diff_android
 
       - name: Upload generated uniffi file (Android)
-        if: steps.diff_android.outcome == 'failure' && contains(matrix.target, 'android')
+        if: steps.diff_android.outcome == 'failure' && matrix.target == 'android'
         uses: actions/upload-artifact@v4
         with:
           name: updated-uniffi-android
@@ -235,11 +240,11 @@ jobs:
           retention-days: 1
 
       - name: Fail workflow for uniffi (Android)
-        if: steps.diff_android.outcome == 'failure' && contains(matrix.target, 'android')
+        if: steps.diff_android.outcome == 'failure' && matrix.target == 'android'
         run: exit 1
 
       - name: Uniffi diff check (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: matrix.target == 'ios'
         working-directory: nym-vpn-core
         run: |
           diff -B build/nym_vpn_lib.swift nym-vpn-lib/uniffi/nym_vpn_lib.swift
@@ -247,7 +252,7 @@ jobs:
         id: diff_ios
 
       - name: Upload generated uniffi file (iOS)
-        if: steps.diff_ios.outcome == 'failure' && (contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1'))
+        if: steps.diff_ios.outcome == 'failure' && matrix.target == 'ios'
         uses: actions/upload-artifact@v4
         with:
           name: updated-uniffi-ios
@@ -255,11 +260,11 @@ jobs:
           retention-days: 1
 
       - name: Fail workflow for uniffi (iOS)
-        if: steps.diff_ios.outcome == 'failure' && (contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1'))
+        if: steps.diff_ios.outcome == 'failure' && matrix.target == 'ios'
         run: exit 1
 
       - name: Run tests
-        if: "!contains(matrix.target, 'android')"
+        if: matrix.target != 'android' && matrix.target != 'ios'
         working-directory: nym-vpn-core
         run: |
           cargo test --verbose
@@ -270,13 +275,13 @@ jobs:
           cargo clippy -- -Dwarnings
 
       - name: Clippy (Android)
-        if: contains(matrix.target, 'android')
+        if: matrix.target == 'android'
         working-directory: nym-vpn-core
         run: |
           cargo ndk -t aarch64-linux-android clippy -p nym-vpn-lib -- -Dwarnings
 
       - name: Clippy (iOS)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'mac-m1')
+        if: matrix.target == 'ios'
         working-directory: nym-vpn-core
         run: |
           cargo clippy --target aarch64-apple-ios -p nym-vpn-lib -- -Dwarnings
