--- a/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
+++ b/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
@@ -18,6 +18,7 @@ bytes.workspace = true
 clap = { workspace = true, features = ["cargo", "derive"] }
 dirs.workspace = true
 futures.workspace = true
+hex = "0.4"
 log.workspace = true
 pnet_packet.workspace = true
 rand.workspace = true
