--- a/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
+++ b/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -55,3 +56,7 @@ nym-sdk.workspace = true
 nym-task.workspace = true
 boringtun = { git = "https://github.com/cloudflare/boringtun.git" }
 base64 = "0.22"
+rust2go = { version = "0.3.4" }
+
+[build-dependencies]
+rust2go = { version = "0.3.4", features = ["build"] }
