--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -211,7 +211,7 @@ jobs:
         run: |
           cargo run --bin uniffi-bindgen generate \
             --library target/aarch64-linux-android/debug/libnym_vpn_lib.so \
-            --config nym-vpn-lib/uniffi.toml \
+            --config crates/nym-vpn-lib/uniffi.toml \
             --language kotlin --out-dir build -n
 
       - name: Generate uniffi (iOS)
@@ -220,14 +220,14 @@ jobs:
         run: |
           cargo run --bin uniffi-bindgen generate \
             --library target/aarch64-apple-ios/debug/libnym_vpn_lib.a  \
-            --config nym-vpn-lib/uniffi.toml \
+            --config crates/nym-vpn-lib/uniffi.toml \
             --language swift --out-dir build -n
 
       - name: Uniffi diff check (Android)
         if: matrix.target == 'android'
         working-directory: nym-vpn-core
         run: |
-          diff -B build/nym_vpn_lib/nym_vpn_lib.kt nym-vpn-lib/uniffi/nym_vpn_lib.kt
+          diff -B build/nym_vpn_lib/nym_vpn_lib.kt crates/nym-vpn-lib/uniffi/nym_vpn_lib.kt
         continue-on-error: true
         id: diff_android
 
@@ -247,7 +247,7 @@ jobs:
         if: matrix.target == 'ios'
         working-directory: nym-vpn-core
         run: |
-          diff -B build/nym_vpn_lib.swift nym-vpn-lib/uniffi/nym_vpn_lib.swift
+          diff -B build/nym_vpn_lib.swift crates/nym-vpn-lib/uniffi/nym_vpn_lib.swift
         continue-on-error: true
         id: diff_ios
 
