--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -76,14 +76,14 @@ nym-topology.workspace = true
 nym-validator-client.workspace = true
 nym-wireguard-types.workspace = true
 
-nym-authenticator-client = { path = "../crates/nym-authenticator-client" }
-nym-connection-monitor = { path = "../crates/nym-connection-monitor" }
-nym-gateway-directory = { path = "../crates/nym-gateway-directory" }
-nym-ip-packet-client = { path = "../crates/nym-ip-packet-client" }
-nym-vpn-api-client = { path = "../crates/nym-vpn-api-client" }
-nym-vpn-store = { path = "../crates/nym-vpn-store" }
-nym-wg-gateway-client = { path = "../crates/nym-wg-gateway-client" }
-nym-wg-go = { path = "../crates/nym-wg-go" }
+nym-authenticator-client = { path = "../nym-authenticator-client" }
+nym-connection-monitor = { path = "../nym-connection-monitor" }
+nym-gateway-directory = { path = "../nym-gateway-directory" }
+nym-ip-packet-client = { path = "../nym-ip-packet-client" }
+nym-vpn-api-client = { path = "../nym-vpn-api-client" }
+nym-vpn-store = { path = "../nym-vpn-store" }
+nym-wg-gateway-client = { path = "../nym-wg-gateway-client" }
+nym-wg-go = { path = "../nym-wg-go" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.14.1"
