--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -47,7 +47,7 @@ nym-validator-client.workspace = true
 
 # Local crates
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
-nym-vpn-lib = { path = "../../nym-vpn-lib" }
+nym-vpn-lib = { path = "../nym-vpn-lib" }
 nym-vpn-proto = { path = "../nym-vpn-proto" }
 nym-vpn-store = { path = "../nym-vpn-store" }
 
