--- a/nym-vpn-x/src-tauri/Cargo.toml
+++ b/nym-vpn-x/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-vpn-x"
-version = "0.1.9"
+version = "0.1.10-dev"
 description = "NymVPN desktop client"
 authors = [
     "Nym Technologies SA",
