--- a/.github/workflows/build-nym-vpn-core-windows.yml
+++ b/.github/workflows/build-nym-vpn-core-windows.yml
@@ -36,11 +36,16 @@ jobs:
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v2
 
-      - name: Install rust toolchain
+      - name: Install Rust toolchain
         uses: brndnmtthws/rust-action-rustup@v1
         with:
           toolchain: stable
           components: rustfmt, clippy
+
+      - name: Install Go toolchain
+        uses: actions/setup-go@v5
+        with:
+          go-version: "stable"
 
       - name: Download wireguard-go-windows artifacts
         uses: actions/download-artifact@v4
