--- a/.github/workflows/build-wireguard-go-linux.yml
+++ b/.github/workflows/build-wireguard-go-linux.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: 1.23
+          cache-dependency-path: ""
           # cache-dependency-path: "**/go.sum"
 
       - name: Check Go version
