--- a/.github/workflows/build-wireguard-go-linux.yml
+++ b/.github/workflows/build-wireguard-go-linux.yml
@@ -21,9 +21,8 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
-          cache-dependency-path: ""
-          # cache-dependency-path: "**/go.sum"
+          go-version: 1.23.0
+          cache-dependency-path: "**/go.sum"
 
       - name: Check Go version
         run: go version
