--- a/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
+++ b/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
@@ -15,7 +15,12 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       # The cargo-deny action uses docker which we currently can't run on
       # arc-ubuntu-22.04, so we have to build manually for now
-      - run: cargo install --locked cargo-deny
-      - run: |
-          cd nym-vpn-core
-          cargo deny --all-features check licenses bans sources
+      # - run: cargo install --locked cargo-deny
+      # - run: |
+      #     cd nym-vpn-core
+      #     cargo deny --all-features check licenses bans sources
+      - uses: EmbarkStudios/cargo-deny-action@v1
+        with:
+          manifest-path: ./nym-vpn-core/Cargo.toml
+          command: check licenses bans sources
+          arguments: --all-features
