Enable workflow_dispatch on ci cargo-deny

--- a/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
+++ b/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     paths:
       - "nym-vpn-core/**"
+  workflow_dispatch:
+
 jobs:
   cargo-deny:
     runs-on: arc-ubuntu-22.04
