--- a/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
+++ b/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
@@ -3,8 +3,6 @@ on:
   pull_request:
     paths:
       - "nym-vpn-core/**"
-  workflow_dispatch:
-
 jobs:
   cargo-deny:
     runs-on: arc-ubuntu-22.04
@@ -15,12 +13,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       # The cargo-deny action uses docker which we currently can't run on
       # arc-ubuntu-22.04, so we have to build manually for now
-      # - run: cargo install --locked cargo-deny
-      # - run: |
-      #     cd nym-vpn-core
-      #     cargo deny --all-features check licenses bans sources
-      - uses: EmbarkStudios/cargo-deny-action@v1
-        with:
-          manifest-path: ./nym-vpn-core/Cargo.toml
-          command: check licenses bans sources
-          arguments: --all-features
+      - run: cargo install --locked cargo-deny
+      - run: |
+          cd nym-vpn-core
+          cargo deny --all-features check licenses bans sources
