--- a/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
+++ b/.github/workflows/ci-nym-vpn-core-cargo-deny.yml
@@ -1,8 +1,10 @@
 name: ci-nym-vpn-core-cargo-deny
 on:
+  workflow_dispatch:
   pull_request:
     paths:
-      - "nym-vpn-core/**"
+      - 'nym-vpn-core/**/Cargo.lock'
+      - 'nym-vpn-core/**/Cargo.toml'
 jobs:
   cargo-deny:
     runs-on: arc-ubuntu-22.04
