--- a/.github/workflows/build-wireguard-go-deb.yml
+++ b/.github/workflows/build-wireguard-go-deb.yml
@@ -17,7 +17,10 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v5
         with:
-          go-version: "stable"
+          # With "stable" here build fails with version mismatch "1.23.1 vs
+          # 1.23.0". So setting it to explicit version as a quick hack to
+          # unblock release builds
+          go-version: 1.23.0
           cache-dependency-path: "**/go.sum"
 
       - name: Build wireguard
