--- a/nym-vpn-core/Makefile
+++ b/nym-vpn-core/Makefile
@@ -11,19 +11,26 @@ IPHONEOS_ARCHS = aarch64-apple-ios aarch64-apple-ios-sim x86_64-apple-ios
 WG_BUILD_DIR = $(CURDIR)/../build/lib
 WG_TARGET_DIR = $(WG_BUILD_DIR)/$(ARCH)
 
-.PHONY: all deb
+.PHONY: all deb fmt
 
 # Main targets
-all: build-vpn-core
+all: build
 
 deb: build-deb-vpn-cli build-deb-vpnd build-deb-vpnc
 
-# CLI build
-build-vpn-core:
+# Build targets
+build:
 	RUSTFLAGS="-L $(WG_TARGET_DIR)" cargo build --release
 
-build-vpn-core-mac:
+build-mac:
 	RUSTFLAGS="-L $(WG_TARGET_DIR) -C link-arg=-all_load -C link-arg=-ObjC -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__info_plist -C link-arg=$(CURDIR)/../nym-vpn-apple/Daemon/Info.plist -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__launchd_plist -C link-arg=$(CURDIR)/nym-vpn-apple/Daemon/Launchd.plist" cargo build --release
+
+# Linting targets
+clippy:
+	cargo clippy --workspace -- -Dwarnings
+
+fmt:
+	cargo fmt --all
 
 # License generation
 generate-licenses: generate-licenses-html generate-licenses-json
@@ -44,7 +51,7 @@ build-deb-vpnd:
 build-deb-vpnc:
 	RUSTFLAGS="-L $(WG_TARGET_DIR)" cargo deb -p nym-vpnc
 
-build-vpn-lib-swift:	
+build-vpn-lib-swift:
 	$(eval RUSTFLAGS += $(foreach arch,$(IPHONEOS_ARCHS),CARGO_TARGET_$(shell echo '$(arch)' | tr '[:lower:]' '[:upper:]' | tr '-' '_')_RUSTFLAGS="-L $(WG_BUILD_DIR)/$(arch)"))
 	cd crates/nym-vpn-lib; \
 	$(RUSTFLAGS) cargo swift package --platforms ios --name NymVpnLib --release
@@ -53,3 +60,6 @@ generate-uniffi-swift:
 	RUSTFLAGS="-L $(WG_TARGET_DIR)" cargo run --bin uniffi-bindgen generate \
 		--library $(CURDIR)/target/aarch64-apple-ios/release/libnym_vpn_lib.a \
 		--language swift --out-dir uniffi -n
+
+# Just print detected architecture and stop
+print-info:
