--- a/.github/workflows/build-wireguard-go-linux.yml
+++ b/.github/workflows/build-wireguard-go-linux.yml
@@ -27,7 +27,7 @@ jobs:
           cache-dependency-path: "**/go.sum"
 
       - name: Clean Go build cache
-        working-directory: wireguard-go/libwg
+        working-directory: wireguard/libwg
         run: go clean -cache -modcache -i -r
 
       - name: Build wireguard
