--- a/nym-vpn-x/src-tauri/Cargo.toml
+++ b/nym-vpn-x/src-tauri/Cargo.toml
@@ -13,20 +13,11 @@ repository = "https://github.com/nymtech/nym-vpn-client"
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "1.5", features = [] }
+tauri-build = { version = "2.0.0-rc", features = [] }
 build-info-build = "0.0.38"
 
 [dependencies]
-tauri = { version = "1.7.1", features = [
-    "clipboard-write-text",
-    "dialog-open",
-    "notification-all",
-    "system-tray",
-    "window-set-size",
-    "os-all",
-    "process-all",
-    "shell-open",
-] }
+tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
 tokio = { version = "1.39", features = ["rt", "sync", "time", "fs", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -58,16 +49,20 @@ rust_iso3166 = "0.1"
 nym-config = { git = "https://github.com/nymtech/nym", rev = "b7baff1" }
 nym-vpn-proto = { path = "../../nym-vpn-core/crates/nym-vpn-proto" }
 
+# tauri deps
+tauri-plugin-shell = "2.0.0-rc"
+tauri-plugin-os = "2.0.0-rc"
+tauri-plugin-notification = "2.0.0-rc"
+tauri-plugin-dialog = "2.0.0-rc"
+tauri-plugin-process = "2.0.0-rc"
+tauri-plugin-clipboard-manager = "2.1.0-beta.7"
+tauri-plugin-updater = "2.0.0-rc"
+
 [target."cfg(windows)".dependencies]
 windows = { version = "0.57.0", features = [
     "Win32_System_Console",
     "Win32_Foundation",
 ] }
-
-[features]
-# this feature is used for production builds or when `devPath` points to the filesystem
-# DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
 
 [profile.release]
 codegen-units = 1
