--- a/.github/workflows/build-nym-vpn-x-linux.yml
+++ b/.github/workflows/build-nym-vpn-x-linux.yml
@@ -25,7 +25,7 @@ env:
 
 jobs:
   build-linux:
-    runs-on: arc-ubuntu-22.04
+    runs-on: arc-ubuntu-22.04-staging
     outputs:
       UPLOAD_DIR_LINUX: ${{ env.UPLOAD_DIR_LINUX }}
       PKG_VERSION: ${{ steps.package-version.outputs.metadata }}
