--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -17,10 +17,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
+        os: [arc-ubuntu-22.04-staging, custom-runner-mac-m1, custom-windows-11]
         target: [native]
         include:
-          - os: arc-ubuntu-22.04
+          - os: arc-ubuntu-22.04-staging
             target: android
           - os: custom-runner-mac-m1
             target: ios
