Switch build-wireguard-go-android.yml to arc-ubuntu-22.04-dind (#1078)
* Switch build-wireguard-go-android.yml to arc-ubuntu-22.04-dind

* Fix wf name

* Add self-path triggers

--- a/.github/workflows/build-wireguard-go-windows.yml
+++ b/.github/workflows/build-wireguard-go-windows.yml
@@ -1,5 +1,10 @@
-name: build-wireguard-go-android
-on: [workflow_dispatch, workflow_call]
+name: build-wireguard-go-windows
+on:
+  workflow_dispatch:
+  workflow_call:
+  pull_request:
+    paths:
+      - ".github/workflows/build-wireguard-go-windows.yml"
 
 env:
   CARGO_TERM_COLOR: always
