--- a/.github/workflows/build-wireguard-go-android.yml
+++ b/.github/workflows/build-wireguard-go-android.yml
@@ -11,15 +11,11 @@ env:
 
 jobs:
   build:
-    runs-on: 'ubuntu-22.04'
+    runs-on: 'arc-ubuntu-22.04-dind'
 
     steps:
       - name: Checkout nym-vpn-client
         uses: actions/checkout@v4
-        with:
-          # fetch only the root files and wireguard dir
-          sparse-checkout: |
-            wireguard
 
       - name: Moving directories
         run: |
